draft pick order overflow fix

--- a/app/assets/stylesheets/drafts.css.scss
+++ b/app/assets/stylesheets/drafts.css.scss
@@ -10,7 +10,7 @@
       display: inline-block;
     }
     .pick-order-container {
-      overflow-y: scroll;
+      overflow-y: hidden;
       white-space: nowrap;
       .pick-order {
         display: inline-block;
